Refactor CORS configuration for frontend support